--- a/ishop/src/main/res/values/dimens.xml
+++ b/ishop/src/main/res/values/dimens.xml
@@ -2,4 +2,18 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- 常用字体 -->
+    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_xsmall">14sp</dimen>
+    <dimen name="text_size_middle">16sp</dimen>
+    <dimen name="text_size_xmiddle">18sp</dimen>
+    <dimen name="text_size_large">20sp</dimen>
+    <dimen name="text_size_xlarge">22sp</dimen>
+    <dimen name="text_size_xxlarge">30sp</dimen>
+    <dimen name="topbar_title_textsize">18sp</dimen>
+    <dimen name="topbar_right_txtsize">16sp</dimen>
+
+    <!-- imagepicker-->
+    <dimen name="image_cover_size">72dp</dimen>
 </resources>
