--- a/mvptest/src/main/res/layout/activity_main.xml
+++ b/mvptest/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="shopsys.ingramy.com.mvptest.MainActivity">
+    tools:context=".view.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
